实现文件上传

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="main">
-
+  <input type="file" id="profilePhotoFileUpload"  multiple="multiple" >
 </div>
 </body>
 </html>
