增加图片上传

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>BmobSDK</title>
+    <style>
+      img{width: 100px;}
+    </style>
 </head>
 <body>
 <div id="main">
   <input type="file" id="profilePhotoFileUpload"  multiple="multiple" >
+  <div id="img"></div>
 </div>
 </body>
 </html>
